fix: more refactoring and important range name fix

--- a/src/class/ClassFormularium.cls
+++ b/src/class/ClassFormularium.cls
@@ -71,7 +71,7 @@ Public Sub GetMedicamenten()
     
     Application.DisplayAlerts = False
 
-    strFileName = GetFormulariumDatabasePath() + sName
+    strFileName = ModFormularium.GetFormulariumDatabasePath() + sName
 
     Workbooks.Open strFileName, True, True
     
