refactor: extensive public macro call refactoring, moved code to appropriate modules

--- a/src/class/ClassFormularium.cls
+++ b/src/class/ClassFormularium.cls
@@ -69,7 +69,7 @@ Public Sub GetMedicamenten()
     
     Application.DisplayAlerts = False
 
-    strFileName = ModFormularium.GetFormulariumDatabasePath() + sName
+    strFileName = ModMedDisc.GetFormulariumDatabasePath() + sName
 
     Workbooks.Open strFileName, True, True
     
