--- a/todo.txt
+++ b/todo.txt
@@ -2,8 +2,6 @@
 	- Updaten van readme, met name met gebruik van repository en conventies.
 
 - Refactoring:
-	- Range namen, omzetten zodat alleen patient data beging met een '_' en dat gestructureerd is waar patient data bij hoort: 'Glob', 'Ped' of 'Neo'.
-	- Code voor het ophalen en opslaan van patienten.
 	- Code voor TPN advies.
 	
 - Source Control:
@@ -12,16 +10,11 @@
 	- formulier voor source controle voor gestructureerde boodschappen.
 	
 - Applicatie:
-	- Patient data automatisch herkennen aan '_'. Indien namen worden toegevoegd of worden verwijderd dan blijft de applicatie gewoon functioneren.
 	- Zorgen dat applicatie kan worden opgestart met patient selectie. I.e. bed nummer kan op de clipboard worden geplaatst en worden uitgelezen door de applicatie waarna automatische selectie van de juiste patient plaats vind.
-	- Update van Patienten.xls bestand zodat deze werkt met de update van patient data. 
-	- Medicatie formulier laten werken met nieuwe Formularium.xls bestand. Toevoegen van indicaties. Routes laten kiezen uit vast lijsten.
 	- Toevoegen van GPK, ATC, indicatie aan AfsprakenTekst bestanden zodat deze ook kunnen worden ingelezen door MetaVision
 	- Ribbon icons updaten met MetaVision versie.
 	
 - Bug fixing:
-	- Overplaatsen/opslaan van patienten loopt nog niet goed.
-	- Code doorlopen op het onveilig gebruik van range namen.
 	
 - MetaVision:
 	- Aanpassen van code voor ophalen van medicatie. Met name toevoegen van GPK, ATC, indicatie en etiket tekst.
@@ -33,13 +26,10 @@ Dutch
 
 Bespreking 11-jan-2017
 
-- Neo_Remove -> rename to Change
 - Neo quick pick for voeding/continue medicatie
 - Neo overzetten act -> 17:00 alles, 17:00 -> act obv keuze
 - MetaVision parameter voor voeding bestelling
 - Enterale zouten doseren in mL
-- Continue medicatie naar 12 stuks
-- Continue medicatie instellingen: vol op 12, stand op 0,5 gluc 10%, uitgezonderd NaCl voor...
 - Doorekenen disc med in totalen
 - TPN adviezen herzien -> wordt aangeleverd door Daniel Vijlbrief
 
@@ -50,13 +40,28 @@ Documentatie
 	- Installatie
 	- Toevoegen continue medicatie
 	- Toevoegen discontinue medicatie
+	- toevoegen voedingen
+	- toevoegen poeders
 
 - Med disc formulier, disabling bij GPK
 - Verw opmerking
 - Aanpassen layout headers (met name leeftijd)
 - Frequenties aanpassen
 - Indien voeding verwijderen dan ook toevoegingen
-- Lab -> Chloor doorzichtig
 - Verw lab voor kolommen
 - Blanco waarde pupil controle
 - Empty date in patient lijst niet tonen	
+- Voorkeurs oplossingen en standen voor continue medicatie
+
+Uitgevoerd:
+
+- Neo_Remove -> rename to Change
+- Continue medicatie instellingen: vol op 12, stand op 0,5 gluc 10%, uitgezonderd NaCl voor...
+- Lab -> Chloor doorzichtig
+- Medicatie formulier laten werken met nieuwe Formularium.xls bestand. Toevoegen van indicaties. Routes laten kiezen uit vast lijsten.
+- Patient data automatisch herkennen aan '_'. Indien namen worden toegevoegd of worden verwijderd dan blijft de applicatie gewoon functioneren.
+- Overplaatsen/opslaan van patienten loopt nog niet goed.
+- Code doorlopen op het onveilig gebruik van range namen.
+- Range namen, omzetten zodat alleen patient data beging met een '_' en dat gestructureerd is waar patient data bij hoort: 'Glob', 'Ped' of 'Neo'.
+- Code voor het ophalen en opslaan van patienten.
+- Update van Patienten.xls bestand zodat deze werkt met de update van patient data. 
